@@ -1,6 +1,6 @@
 GammaLib information
 ====================
-Version: 00-08-01 (5 February 2014)
+Version: 00-09-00 (8 July 2014)
 Author:  Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu)
 
 
