@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 00-09-00
 
 Author(s) : Juergen Knoedlseder
 
-13 June 2014
+8 July 2014
 
 
 1. Introduction
@@ -80,6 +80,9 @@ Added __len__ and copy() methods to GEvents Python interface.
 The integration precision in GObservation::npred_spec has been increased
 to 1e-8 to cope with strongly fluctuating file functions (as they appear
 for CTA background models). See bug #1142 for more information.
+
+The binned likelihood functions now implement data filtering. All event
+bins with negative values will be excluded from the likelihood computation.
 
 
 11. Optimization module
